@@ -165,8 +165,9 @@
     ("emacspeak-sh-script"  . nil )
     ("emacspeak-sigbegone"  . nil )
     ("emacspeak-solitaire"  . nil )
-    ("emacspeak-speedbar"  . ("speedbar-prepare"))
     ("emacspeak-sql"  . nil )
+    ("emacspeak-speedbar"  . ("speedbar-prepare"))
+    ("emacspeak-ruby" . nil)
     ("emacspeak-supercite"  . ("supercite"))
     ("emacspeak-table-ui"  . nil )
     ("emacspeak-table"  . nil )
